--- a/galery.html
+++ b/galery.html
@@ -34,6 +34,60 @@
       </div>
     </header>
     <!-- header -->
+    <!-- navbar -->
+    <div class="menus">
+      <div class="container d-flex align-items-center">
+        <h1 class="logo mr-auto navbar-brand">
+          <a href="index.html">Project</a>
+        </h1>
+        <nav class="nav-menu d-none d-lg-block">
+          <ul>
+            <li class="active"><a href="index.html">Beranda</a></li>
+            <li class="drop-down">
+              <a href="">Tentang Kami</a>
+              <ul>
+                <li><a href="sejarah.html">Sejarah</a></li>
+                <li><a href="vm.html">Visi dan Misi</a></li>
+                <li class="drop-down">
+                  <a href="#">Deep Drop Down</a>
+                  <ul>
+                    <li><a href="#">Deep Drop Down 1</a></li>
+                    <li><a href="#">Deep Drop Down 2</a></li>
+                    <li><a href="#">Deep Drop Down 3</a></li>
+                    <li><a href="#">Deep Drop Down 4</a></li>
+                    <li><a href="#">Deep Drop Down 5</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li class="drop-down">
+              <a href="">Akademik</a>
+              <ul>
+                <li><a href="galery.html">Galeri</a></li>
+                <li><a href="testimoni.html">Testimoni</a></li>
+                <li><a href="animo.html">Animo & Daya Tampung</a></li>
+                <li><a href="biaya.html">Biaya Pendidikan</a></li>
+                <li><a href="jadwal.html">Jadwal Pendaftaran</a></li>
+                <li class="drop-down">
+                  <a href="#">Deep Drop Down</a>
+                  <ul>
+                    <li><a href="#">Deep Drop Down 1</a></li>
+                    <li><a href="#">Deep Drop Down 2</a></li>
+                    <li><a href="#">Deep Drop Down 3</a></li>
+                    <li><a href="#">Deep Drop Down 4</a></li>
+                    <li><a href="#">Deep Drop Down 5</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="kebijakan.html">Kebijakan Privasi</a></li>
+            <li><a href="kontak.html">Kontak</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
+    <!-- navbar -->
     <!-- content -->
     <section class="section-galery gallery-menu">
       <div class="container">
@@ -192,60 +246,7 @@
       </div>
     </section>
     <!-- content -->
-    <!-- navbar -->
-    <div class="menus">
-      <div class="container d-flex align-items-center">
-        <h1 class="logo mr-auto navbar-brand">
-          <a href="index.html">Project</a>
-        </h1>
-        <nav class="nav-menu d-none d-lg-block">
-          <ul>
-            <li class="active"><a href="index.html">Beranda</a></li>
-            <li class="drop-down">
-              <a href="">Tentang Kami</a>
-              <ul>
-                <li><a href="sejarah.html">Sejarah</a></li>
-                <li><a href="vm.html">Visi dan Misi</a></li>
-                <li class="drop-down">
-                  <a href="#">Deep Drop Down</a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li class="drop-down">
-              <a href="">Akademik</a>
-              <ul>
-                <li><a href="galery.html">Galeri</a></li>
-                <li><a href="#">Testimoni</a></li>
-                <li><a href="#">Animo & Daya Tampung</a></li>
-                <li><a href="#">Biaya Pendidikan</a></li>
-                <li><a href="#">Jadwal Pendaftaran</a></li>
-                <li class="drop-down">
-                  <a href="#">Deep Drop Down</a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li><a href="#services">Kebijakan Privasi</a></li>
-            <li><a href="#portfolio">Kontak</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
 
-    <!-- navbar -->
     <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
