--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
               <a href="">Akademik</a>
               <ul>
                 <li><a href="galery.html">Galeri</a></li>
-                <li><a href="#">Testimoni</a></li>
-                <li><a href="#">Animo & Daya Tampung</a></li>
-                <li><a href="#">Biaya Pendidikan</a></li>
-                <li><a href="#">Jadwal Pendaftaran</a></li>
+                <li><a href="testimoni.html">Testimoni</a></li>
+                <li><a href="animo.html">Animo & Daya Tampung</a></li>
+                <li><a href="biaya.html">Biaya Pendidikan</a></li>
+                <li><a href="jadwal.html">Jadwal Pendaftaran</a></li>
                 <li class="drop-down">
                   <a href="#">Deep Drop Down</a>
                   <ul>
@@ -80,8 +80,8 @@
                 </li>
               </ul>
             </li>
-            <li><a href="#services">Kebijakan Privasi</a></li>
-            <li><a href="#portfolio">Kontak</a></li>
+            <li><a href="kebijakan.html">Kebijakan Privasi</a></li>
+            <li><a href="kontak.html">Kontak</a></li>
           </ul>
         </nav>
       </div>
@@ -288,7 +288,6 @@
                   <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
-
               <div class="news-grid">
                 <div class="news-grid-image">
                   <img src="frontend/images/image3.jpg" />
