--- a/berita.html
+++ b/berita.html
@@ -34,164 +34,6 @@
       </div>
     </header>
     <!-- header -->
-    <!-- content -->
-    <section class="section-galery news-menu">
-      <div class="container">
-        <div class="row mb-3">
-          <div class="col-12">
-            <h5>NEWS</h5>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                    <li>
-                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
-                      19, 2020
-                    </li>
-                    <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
-                    </li>
-                    
-                  </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                      <li>
-                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
-                      19, 2020
-                    </li>
-                    <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
-                    </li>
-                  </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                      <li>
-                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
-                      19, 2020
-                    </li>
-                    <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
-                    </li>
-                  </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                      <li>
-                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
-                      19, 2020
-                    </li>
-                    <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
-                    </li>
-                  </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- content -->
     <!-- navbar -->
     <div class="menus">
       <div class="container d-flex align-items-center">
@@ -222,10 +64,10 @@
               <a href="">Akademik</a>
               <ul>
                 <li><a href="galery.html">Galeri</a></li>
-                <li><a href="#">Testimoni</a></li>
-                <li><a href="#">Animo & Daya Tampung</a></li>
-                <li><a href="#">Biaya Pendidikan</a></li>
-                <li><a href="#">Jadwal Pendaftaran</a></li>
+                <li><a href="testimoni.html">Testimoni</a></li>
+                <li><a href="animo.html">Animo & Daya Tampung</a></li>
+                <li><a href="biaya.html">Biaya Pendidikan</a></li>
+                <li><a href="jadwal.html">Jadwal Pendaftaran</a></li>
                 <li class="drop-down">
                   <a href="#">Deep Drop Down</a>
                   <ul>
@@ -238,14 +80,168 @@
                 </li>
               </ul>
             </li>
-            <li><a href="#services">Kebijakan Privasi</a></li>
-            <li><a href="#portfolio">Kontak</a></li>
+            <li><a href="kebijakan.html">Kebijakan Privasi</a></li>
+            <li><a href="kontak.html">Kontak</a></li>
           </ul>
         </nav>
       </div>
     </div>
 
     <!-- navbar -->
+    <!-- content -->
+    <section class="section-galery news-menu">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col-12">
+            <h5>NEWS</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-2">
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
+                </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                    Ramores Raserva
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="detail-berita.html">Read More...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
+                </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                    Ramores Raserva
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="detail-berita.html">Read More...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
+                </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                    Ramores Raserva
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="detail-berita.html">Read More...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
+                </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                    Ramores Raserva
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="detail-berita.html">Read More...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- content -->
+
     <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
