--- a/kontak.html
+++ b/kontak.html
@@ -88,165 +88,117 @@
     </div>
 
     <!-- navbar -->
-    <!-- content -->
-    <section class="section-galery gallery-menu">
+
+    <section class="section-kontak contact">
       <div class="container">
-        <div class="row mb-3">
-          <div class="col-12">
-            <h5>GALERY</h5>
-          </div>
+        <div class="section-title">
+          <span>Kontak</span>
+          <h2>Kontak</h2>
+          <p>
+            Sit sint consectetur velit quisquam cupiditate impedit suscipit
+            alias
+          </p>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image1.jpg')"
-                >
-                  <a
-                    href="frontend/images/image1.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  >
-                  </a>
-                </div>
+          <div class="col-lg-5 d-flex align-items-stretch">
+            <div class="info">
+              <div class="address">
+                <i class="icofont-google-map"></i>
+                <h4>Location:</h4>
+                <p>A108 Adam Street, New York, NY 535022</p>
               </div>
+
+              <div class="email">
+                <i class="icofont-envelope"></i>
+                <h4>Email:</h4>
+                <p>info@example.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="icofont-phone"></i>
+                <h4>Call:</h4>
+                <p>+1 5589 55488 55s</p>
+              </div>
+
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6887123064917!2d106.75158631431097!3d-6.304567863454402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ef103911afdd%3A0xaa8cbd97d3e66313!2sHANASTI%20%26%20REKAN!5e0!3m2!1sid!2sid!4v1594569142660!5m2!1sid!2sid"
+                frameborder="0"
+                style="border: 0; width: 100%; height: 290px"
+                allowfullscreen
+              ></iframe>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image5.jpg')"
-                >
-                  <a
-                    href="frontend/images/image5.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form
+              action="forms/contact.php"
+              method="post"
+              role="form"
+              class="php-email-form"
+            >
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <label for="name">Your Name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    id="name"
+                    data-rule="minlen:4"
+                    data-msg="Please enter at least 4 chars"
+                  />
+                  <div class="validate"></div>
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="name">Your Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    id="email"
+                    data-rule="email"
+                    data-msg="Please enter a valid email"
+                  />
+                  <div class="validate"></div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image2.jpg')"
-                >
-                  <a
-                    href="frontend/images/image2.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+              <div class="form-group">
+                <label for="name">Subject</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="subject"
+                  id="subject"
+                  data-rule="minlen:4"
+                  data-msg="Please enter at least 8 chars of subject"
+                />
+                <div class="validate"></div>
+              </div>
+              <div class="form-group">
+                <label for="name">Message</label>
+                <textarea
+                  class="form-control"
+                  name="message"
+                  rows="10"
+                  data-rule="required"
+                  data-msg="Please write something for us"
+                ></textarea>
+                <div class="validate"></div>
+              </div>
+              <div class="mb-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">
+                  Your message has been sent. Thank you!
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image5.jpg')"
-                >
-                  <a
-                    href="frontend/images/image5.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
-                </div>
+              <div class="text-center">
+                <button type="submit">Send Message</button>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image3.jpg')"
-                >
-                  <a
-                    href="frontend/images/image3.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image4.jpg')"
-                >
-                  <a
-                    href="frontend/images/image4.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image4.jpg')"
-                >
-                  <a
-                    href="frontend/images/image4.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image5.jpg')"
-                >
-                  <a
-                    href="/frontend/images/image5.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image4.jpg')"
-                >
-                  <a
-                    href="/frontend/images/image4.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
-                </div>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
     </section>
-    <!-- content -->
-
     <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
